objects/Fulfillment__c.object
<CustomObject>
    <description>This object will hold the fulfillment information for Training and Credits. The data in this object is used to create Invoices and Credit Memos (CC Invoice records).</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>CC Order Account Name</description>
        <formula>Order__r.ccrz__Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Transaction_Payment_Date__c</fullName>
        <description>CC Transaction Payment Created Date</description>
        <formula>CC_Transaction_Payment__r.CreatedDate</formula>
        <inlineHelpText>CC Transaction Payment Created Date</inlineHelpText>
        <label>CC Transaction Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Transaction_Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CC Transaction Payment</label>
        <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOCIS_Category__c</fullName>
        <formula>Order__r.FOCIS_Category__c</formula>
        <label>FOCIS Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Fulfillment_Items__c</fullName>
        <description>Calculates the number of Fulfillment Item records with Status equal to &apos;Ready&apos; or &apos;In Progress&apos;</description>
        <inlineHelpText>Number of Fulfillment Item records with Status set to &apos;Ready&apos; or &apos;In Progress&apos;</inlineHelpText>
        <label>Open Fulfillment Items</label>
        <summaryFilterItems>
            <field>Fulfillment_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Ready</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Item__c.Fulfillment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order fulfilled</description>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>CC Transaction Payment - Account Type</description>
        <formula>CC_Transaction_Payment__r.ccrz__AccountType__c</formula>
        <inlineHelpText>CC Transaction Payment - Account Type</inlineHelpText>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>CC Transaction Payment - Payment Type</description>
        <formula>CC_Transaction_Payment__r.ccrz__PaymentType__c</formula>
        <inlineHelpText>CC Transaction Payment - Payment Type</inlineHelpText>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of fulfillment</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplemental_Information__c</fullName>
        <description>Supplemental Information to be printed on invoice</description>
        <label>Supplemental Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of fulfillment</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>transaction_Contact_name__c</fullName>
        <formula>(CC_Transaction_Payment__r.ccrz__Contact__r.FirstName + CC_Transaction_Payment__r.ccrz__Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact name</label>
        <type>Text</type>
    </fields>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>